# AKS_project

./: CMakeLists.txt  README.md  conf.txt  main.cpp
Configuration/: configuration.h
MainTask/: main_task.cpp  main_task.h
ThreadsafeQueue/: threadsafe_queue.h
b/: conf.txt  script.py
hrefStruct/: href_t.h
